# brij_yatra

./: .env.example  .gitignore  README.md
.github/workflows/: brijyatra-ci.yml
apps/api/: Cargo.toml  Dockerfile  railway.toml
apps/api/migrations/: 20250323103000_initial.sql  20250323104000_seed_mvp.sql
apps/api/src/: config.rs  error.rs  group_access.rs  jobs.rs  lib.rs  main.rs  notifications.rs  state.rs
apps/api/src/auth/: firebase.rs  mod.rs
apps/api/src/routes/: admin.rs  analytics.rs  auth.rs  bookings.rs  guide.rs  health.rs  media.rs  mod.rs  themes.rs  trips.rs
apps/mobile/: .firebaserc  README.md  firebase.json  pubspec.yaml
apps/mobile/.firebase/: hosting.YnVpbGQvd2Vi.cache
apps/mobile/android/app/: build.gradle.kts  google-services.json
apps/mobile/ios/Runner/: GoogleService-Info.plist  Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: app.dart  firebase_options.dart  main.dart
apps/mobile/lib/core/config/: app_flags.dart  env.dart
apps/mobile/lib/core/design_system/: app_tokens.dart  brij_theme_data.dart
apps/mobile/lib/core/mvp/: mvp_flow.dart
apps/mobile/lib/core/network/: api_client.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/runner/: my_application.cc
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile/test/: mvp_flow_test.dart  widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/mobile/windows/runner/: Runner.rc  main.cpp
docs/: deploy-railway-firebase.md
infra/: docker-compose.yml
(+25 files in other folders)
