[package]
name = "brijyatra_api"
version = "0.1.0"
edition = "2021"
default-run = "brijyatra_api"

[lib]
path = "src/lib.rs"

[[bin]]
name = "brijyatra_api"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower_governor = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
thiserror = "2"
anyhow = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
rand = "0.8"
http = "1"
dotenvy = "0.15"
